# mcpserver-simplicity

./: Dockerfile  QUICKSTART.md  README.md  agent_autofix.py  agent_claude.py  docker-compose.yml  pyproject.toml  server.py  setup_poetry.sh  test_examples.py
examples/: README.md  arithmetic.simf  scoping.simf  witness_computation.simf  witness_equality.simf
src/mcp_simplicity_server/: __init__.py
